app/assets/stylesheets/layout/home.css.scss
$room_time_width: 100px;
$room_time_height: 20px;

.nav {margin-bottom: 0;}
#tabs-floor {
  .progress {margin: 0;}
  .progress.vertical {margin: 0 auto; float: none;}

  #dayviewTable {
    position: relative;
    height: $room_time_height * 25 + 50px;

    #room-time-list {
      margin-top: $room_time_height / 2;
      width: $room_time_width;
      float: left;

      .room-time {
        height: $room_time_height;
        text-align: right;
        padding: 0 5px;
      }
    }

    .room-time-reference-line {
      padding-left: $room_time_width - 5px;

      > div {
        height: $room_time_height - 1px;
        width: 100%;
        border-bottom: 1px dotted grey;
      }

      .time-reference-line:nth-child(odd) { background-color: #EED; }
    }

    #loading-spinner {
      background: url('ajax-loader.gif') no-repeat 50% 50%;
      width:100%; height:100%;
      position: absolute; top: 0;
      display: none; z-index: 10;
    }

    .room-data-wrap {
      overflow-x: scroll; overflow-y: hidden;
      margin-left: $room_time_width + 10px;
      white-space: nowrap;

      .room-data {width: 40px;
        display: inline-block;
        margin-left: 4px;
        height: $room_time_height * 25;

        &.fadeout {opacity: 0.4;}

        .title {text-align: center;}

        .room-data-bar.progress.vertical {height: $room_time_height * 24;}
      }
    }

  }
  .nav-tabs > li {
    @media (min-width: 479px) {
      margin: 0 10px;
    }
    a {padding: 2px 12px;}
  }
}

#login-link {
  font-size: 16px;
}

#sidebar {
  font-size: 16px;
  .ui-datepicker .ui-widget-header {
    font-size: 1em;
  }
  @media (max-width: 979px) and (min-width: 768px) {
    .ui-datepicker table * {
      font-size: 12px;
    }
    .ui-datepicker .ui-widget-header {
      padding: 2px;
      font-size: 12px;
    }
  }
  input[type="radio"], input[type="checkbox"] { margin: 0px 4px 0px; }
}

